# toptastic-bot

./: .gitignore  DISCLAIMER.md  LICENSE  Makefile  README.md  debug_scraper.py  debug_webpage.py  pyproject.toml  requirements.txt  songs.db
.github/workflows/: publish-pages.yml  update-database.yml  update-packages.yml
scripts/: analyze_top_videos.py  export_csv.py  update_charts.py  update_videos.py
src/: __init__.py  database.py  scraper.py  scraper_new.py  video_selector.py  youtube.py
tests/: test_scraper.py  test_scraper_new.py  test_video_selector.py
